@@ -4983,7 +4983,9 @@
 
 #!-(and win32 (not sb-thread))
 (deftransform sleep ((seconds) ((integer 0 #.(expt 10 8))))
-  `(sb!unix:nanosleep seconds 0))
+  `(if sb!impl::*deadline*
+       (locally (declare (notinline sleep)) (sleep seconds))
+       (sb!unix:nanosleep seconds 0)))
 
 #!-(and win32 (not sb-thread))
 (deftransform sleep ((seconds) ((constant-arg (real 0))))
@@ -4992,7 +4994,9 @@
         (sb!impl::split-seconds-for-sleep seconds-value)
       (if (> seconds (expt 10 8))
           (give-up-ir1-transform)
-          `(sb!unix:nanosleep ,seconds ,nano)))))
+          `(if sb!impl::*deadline*
+               (locally (declare (notinline sleep)) (sleep seconds))
+               (sb!unix:nanosleep ,seconds ,nano))))))
 
 ;; On 64-bit architectures the TLS index is in the symbol header,
 ;; !DEFINE-PRIMITIVE-OBJECT doesn't define an accessor for it.
